#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(lingxiang.tang@gmail.com)
AC_CONFIG_SRCDIR([stpl/stpl_othertraits.h])
AM_INIT_AUTOMAKE(stpl, 0.9.17)
#AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_HEADER_STDC

AC_CONFIG_FILES([Makefile 
				stpl/Makefile 
				utils/Makefile
				test/Makefile 	
				spec/Makefile 
				])
AC_OUTPUT
